--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,6 @@ authors = ["Nikolay Danailov <frostblooded@yahoo.com>"]
 edition = "2018"
 
 [dependencies]
-petgraph = '0.5.1'
+petgraph = "0.5.1"
+log = "0.4.8"
+simple_logger = "1.6.0"
